--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -17,7 +17,7 @@
 
 <!-- main content -->
 <div class="container bg-light p-3">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center align-items-center">
 
         <!-- mensagem de erro -->
         <div th:if="${param.error}" class="alert alert-danger mt-3" role="alert">
