--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -17,7 +17,7 @@
 
 <!-- main content -->
 <div class="container bg-light p-3">
-    <div class="row justify-content-center align-items-center">
+    <div class="row justify-content-center mt-5">
 
         <!-- mensagem de erro -->
         <div th:if="${param.error}" th:text="${param.error}" class="alert alert-danger col-md-6 text-center">
@@ -25,7 +25,7 @@
         </div>
 
         <!-- formulário de login -->
-        <div class="col-md-6">
+        <div class="col-md-6 align-self-center">
             <div class="card">
                 <div class="card-header bg-primary text-white">
                     <h4 class="fw-bold">Redefinir Senha</h4>
