--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -141,16 +141,16 @@
                 <!-- Article Card -->
                 <div class="row">
                     <div class="col-lg-8 article" id="articleContainer">
-                        <div class="card mb-3" th:each="article, iterStart : ${articles}" th:if="${iterStart.index > 3}">
+                        <div class="card mb-3" th:each="article, iterStart : ${articles}" th:if="${iterStart.index > 2}">
                             <div class="card-img" id="articleImage">
                                 <img th:src="@{${article.imageUrl}}" class="img-fluid rounded-3" alt="Imagem do artigo">
                             </div>
                             <div class="card-body" id="articleContent">
-                                <p class="text-muted fw-medium text-start" th:text="${article.category}"></p>
+                                <p class="text-muted fw-medium text-start" th:text="${article.category.getName()}"></p>
                                 <h5 class="card-title text-start" th:text="${article.title}"></h5>
                                 <div class="d-md-block d-none">
                                     <p class="card-subtile text-start" th:text="${article.subtitle}"></p>
-                                    <p class="text-muted text-start" th:text="${article.dateCreated}"></p>
+                                    <p class="text-muted text-start" th:text="${#temporals.format(article.dateCreated, 'dd/MM/yyyy')}"></p>
                                 </div>
                                 <a th:href="@{/articles/{id}(id=${article.id})}" class="btn btn-primary">Ler Mais</a>
                             </div>
